<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.github.maximkirko.wpclient.WrongParkingActivity"
    tools:showIn="@layout/activity_wrong_parking"
    android:padding="0dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:padding="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:padding="15dp">

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/add_photo"
                android:id="@+id/textView2"
                android:layout_alignBottom="@+id/buttonHint"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:nestedScrollingEnabled="true"
                android:focusable="true"
                android:focusableInTouchMode="true">
                <requestFocus />
            </TextView>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" ? "
                android:textSize="20dp"
                android:id="@+id/buttonHint"
                android:background="@drawable/circle_button"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:id="@+id/imageView"
                android:background="@mipmap/ic_photo_add"
                android:layout_alignTop="@+id/imageView2"
                android:layout_alignParentStart="true"
                android:onClick="onImageViewClick"
                android:longClickable="true" />

            <ImageView
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:id="@+id/imageView2"
                android:background="@mipmap/ic_photo_add"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp"
                android:onClick="onImageViewClick" />

            <ImageView
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:id="@+id/imageView3"
                android:background="@mipmap/ic_photo_add"
                android:layout_alignTop="@+id/imageView2"
                android:layout_alignParentEnd="true"
                android:onClick="onImageViewClick" />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/choose_violation_type"
                android:id="@+id/textView3"
                android:layout_below="@+id/imageView"
                android:layout_alignParentStart="true"
                android:layout_marginTop="25dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/spinnerViolType"
                android:layout_below="@+id/textView3"
                android:layout_alignParentStart="true" />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/license_plate"
                android:id="@+id/textView4"
                android:layout_below="@+id/spinnerViolType"
                android:layout_alignParentStart="true" />

            <EditText
                style="@style/EditTextSingle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextLicensePlate"
                android:layout_below="@+id/textView4"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/imageView3" />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/address"
                android:id="@+id/textView5"
                android:layout_below="@+id/editTextLicensePlate"
                android:layout_alignParentStart="true" />

            <EditText
                style="@style/EditTextSingle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextAddress"
                android:layout_below="@+id/textView5"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/buttonHint" />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/date"
                android:id="@+id/textView6"
                android:layout_below="@+id/editTextAddress"
                android:layout_alignParentStart="true" />

            <EditText
                style="@style/EditTextSingle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextDate"
                android:layout_below="@+id/textView6"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/button" />

            <TextView
                style="@style/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/comment"
                android:id="@+id/textView7"
                android:layout_below="@+id/editTextDate"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editTextComment"
                android:layout_below="@+id/textView7"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/imageView3" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:layout_toEndOf="@+id/editTextAddress"
                android:layout_alignBottom="@+id/editTextAddress"
                android:background="@drawable/ic_refresh"
                android:onClick="onAddressUpdateClick"
                android:layout_alignTop="@+id/editTextAddress" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@+id/editTextDate"
                android:layout_toEndOf="@+id/editTextDate"
                android:layout_alignTop="@+id/editTextDate"
                android:background="@drawable/ic_refresh"
                android:onClick="onDateUpdateClick"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
